--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "An application to parse the EQ2 log file and extract key data for performance analysis.",
   "main": "app copy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,11 @@
   },
   "homepage": "https://github.com/tOskr-uk/EQ2-Parser#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^4.12.0",
+    "mongoose": "^6.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
