some minor file reorg and installed and configured ejs templating engine

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/tOskr-uk/EQ2-Parser#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^4.12.0",
     "mongoose": "^6.7.2"
