--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "An application to parse the EQ2 log file and extract key data for performance analysis.",
   "main": "app copy.js",
   "scripts": {
-    "parse": "nodemon src/parse.js",
-    "server": "nodemon src/server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,7 @@
   },
   "homepage": "https://github.com/tOskr-uk/EQ2-Parser#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^4.12.0",
